...
    <string name="brightness">Brightness</string>
    <string name="manual">Manual</string>
    <string name="reset">Reset</string>
    <string name="hex_code">Hex Code</string>
    <string name="hex_error_message">Please enter a hex color code (contains only A–F and 0–9).</string>
    <string name="color_confirmation">Color Confirmation</string>
    <string name="keep_color_confirm">Do you want to keep this color?</string>
    <string name="keep_color">Keep Color</string>
    <string name="choose_new_color">Choose New Color</string>


    <!--Events-->
    <string name="refresh_mirror_confirm">Would you like to refresh the mirror?</string>
...
    <string name="weather_information">Weather Information</string>
    <string name="city">City</string>
    <!--<string name="state">State</string>-->
    <string name="ZIP_code">ZIP Code</string>

    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>

    <string name="traffic_information">Traffic Information</string>
    <string name="home_address">Home Address</string>
    <string name="work_school_address">Work/School Address</string>

    <string name="city_error_message">Please enter a city.</string>
    <string name="state_error_message">Please enter a state.</string>
    <string name="zip_error_message">Please enter a 5-digit ZIP code.</string>
    <string name="home_address_error_message">Please enter a home address.</string>
    <string name="work_school_address_error_message">Please enter either your work or school address.</string>


    <!--Bluetooth-->
    <string name="bt_title">Find Your Mirror</string>
    <string name="bt_ssid_input">WiFi SSID</string>
    <string name="bt_password_hint">WiFi Password</string>
...
    <string name="bt_sent_info_success">Successfully Sent Network Information</string>
    <string name="bt_connection_failure">Could Not Connect to Iskandar Mirror. Please make sure you are paired.</string>


    <!--Rest-->
    <string name="rest_get_error">Could not load information from Iskandar.  Please try again.</string>
    <string name="rest_put_error">Could not send information to Iskandar.  Please try again.</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

...
