...
            android:textSize="@dimen/headerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/city"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:nextFocusDown="@id/stateSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherTextView" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/stateSpinner"
...
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityEditText" />

        <EditText
            android:id="@+id/zipCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/ZIP_code"
            android:importantForAutofill="no"
...
            android:textSize="@dimen/headerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperatureRadioGroup" />

        <EditText
            android:id="@+id/homeAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/home_address"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trafficTextView" />

        <EditText
            android:id="@+id/workSchoolAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/work_school_address"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeAddressEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopMedium"
            android:padding="@dimen/buttonPadding"
            android:paddingStart="@dimen/buttonPaddingStartEnd"
            android:paddingEnd="@dimen/buttonPaddingStartEnd"
...
