<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flask.colorpicker.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:alphaSlider="true"
            app:alphaSliderView="@+id/alphaSlider"
            app:density="12"
            app:layout_constraintBottom_toTopOf="@+id/lightnessSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lightnessSlider="true"
            app:lightnessSliderView="@+id/lightnessSlider"
            app:wheelType="CIRCLE" />

        <TextView
            android:id="@+id/lightnessSliderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lightness"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colorPickerView" />

        <com.flask.colorpicker.slider.LightnessSlider
            android:id="@+id/lightnessSlider"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lightnessSliderText" />

        <TextView
            android:id="@+id/alphaSliderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lightnessSlider" />

        <com.flask.colorpicker.slider.AlphaSlider
            android:id="@+id/alphaSlider"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alphaSliderText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/hexCodeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/hex_code"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="6"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alphaSlider" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/manualButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:autofillHints=""
            android:padding="@dimen/buttonPadding"
            android:paddingStart="@dimen/buttonPaddingStartEnd"
            android:paddingEnd="@dimen/buttonPaddingStartEnd"
            android:text="@string/manual"
            android:textSize="@dimen/buttonText"
            app:layout_constraintBottom_toBottomOf="@+id/hexCodeEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/hexCodeEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin"
            android:padding="@dimen/buttonPadding"
            android:paddingStart="@dimen/buttonPaddingStartEnd"
            android:paddingEnd="@dimen/buttonPaddingStartEnd"
            android:text="@string/submit"
            android:textSize="@dimen/buttonText"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hexCodeEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:padding="@dimen/buttonPadding"
            android:paddingStart="@dimen/buttonPaddingStartEnd"
            android:paddingEnd="@dimen/buttonPaddingStartEnd"
            android:text="@string/reset"
            android:textSize="@dimen/buttonText"
            app:layout_constraintBottom_toBottomOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/submitButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>